--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="script.js"></script> -->
-    <script src="bst.js"></script>
+    <script defer type="module" src="bst.js"></script>
+    <script defer type="module" src="index.js"></script>
     <title>Document</title>
   </head>
   <body></body>
