linked list/BST redo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script defer type="module" src="linkedList.js"></script>
     <script defer type="module" src="index.js"></script>
     <script defer type="module" src="bst.js"></script>
+    <script src="recursion.js"></script>
+
+    <link rel="stylesheet" href="" src="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body style="background-color: black"></body>
 </html>
